# SoPra

./: .gitignore  .travis.yml  README.md
Blatt01/: main.tex
Blatt02/: Makefile  README.md  main.tex  uml.dot  uml.uxf
Blatt03/: .gitignore  Makefile  anwendungsfall.dot  main.tex  zustandsdiagramm.dot
Blatt04/: Makefile  klassendiagrammFlappyWizard.dot  klassendiagrammHighscoreServer.dot  main.tex
Blatt05/: CMakeLists.txt  Dockerfile  GameItem.cpp  GameItem.hpp  Player.cpp  Player.hpp  README.md  config.json  highscore.json  main.cpp  sonar-project.properties
Blatt05/Controller/: Config.cpp  Config.hpp  Environment.cpp  Environment.hpp  GameConfig.cpp  GameConfig.hpp  ResourceConfig.cpp  ResourceConfig.hpp
Blatt05/Model/: DoublePoints.cpp  DoublePoints.hpp  GameItem.cpp  GameItem.hpp  HighscoreSaver.cpp  HighscoreSaver.hpp  Invulnerable.cpp  Invulnerable.hpp  Item.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  Troll.cpp  Troll.hpp  TurboMode.cpp  TurboMode.hpp
Blatt05/Res/: Help.txt
Blatt05/Tests/: GameItem.hpp  Obstacle.hpp  Player.hpp  Rectangle.hpp  Vector.h  highscore_test.json  main.cpp
Blatt05/Tests/Controller/: Config.hpp  Environment.hpp  GameConfig.hpp  ResourceConfig.hpp
Blatt05/Tests/Model/: DoublePoints.hpp  GameItem.hpp  HighscoreSaver.hpp  Invulnerable.hpp  Item.hpp  Obstacle.hpp  Player.hpp  Troll.hpp  TurboMode.hpp
Blatt05/Tests/Util/: Rectangle.hpp  Vector.h
Blatt05/Util/: Rectangle.hpp  Vector.cpp  Vector.h  Vector.hpp
Blatt05/View/: Button.cpp  Button.hpp  ExitScreen.cpp  ExitScreen.hpp  GameOverScreen.cpp  GameOverScreen.hpp  GameScreen.cpp  GameScreen.hpp  HelpScreen.cpp  HelpScreen.hpp  HighscoreScreen.cpp  HighscoreScreen.hpp  Screen.cpp  Screen.hpp  StartScreen.cpp  StartScreen.hpp
Blatt05/tests/: GameItem.hpp  Player.hpp  Rectangle.hpp  Vector.h  main.cpp
